clean up variables

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -187,11 +187,13 @@ $btn-bg-disabled-dark:     $white-divider !default;
 $btn-bg-disabled-light:    $black-divider !default;
 $btn-bg-hover-dark:        $dark-hover !default;
 $btn-bg-hover-light:       $light-hover !default;
-$btn-bg-overlay:           $black-divider !default;
+$btn-bg-overlay-dark:      $black-divider !default;
+$btn-bg-overlay-light:     $black-divider !default;
 $btn-border-radius:        2px !default;
 $btn-box-shadow:           $shadow-2dp !default;
 $btn-box-shadow-active:    $shadow-8dp !default;
-$btn-color:                unquote('$primary') !default;
+$btn-color-dark:           unquote('$primary') !default;
+$btn-color-light:          unquote('$primary') !default;
 $btn-color-disabled-dark:  rgba(0, 0, 0, .3) !default;
 $btn-color-disabled-light: rgba(0, 0, 0, .26) !default;
 $btn-height:               36px !default;
@@ -216,9 +218,10 @@ $card-box-shadow:       $shadow-2dp !default;
 $card-box-shadow-hover: $shadow-8dp !default;
 $card-child-bg-dark:    $dark-2 !default;
 $card-child-bg-light:   $light-2 !default;
-$card-color:            unquote('$primary') !default;
-$card-inner-spacer-x:   $spacer-sm !default;
-$card-inner-spacer-y:   $spacer !default;
+$card-color-dark:       unquote('$primary') !default;
+$card-color-light:      unquote('$primary') !default;
+$card-inner-spacer-x:   8px !default;
+$card-inner-spacer-y:   16px !default;
 $card-margin-x:         $spacer-sm !default;
 $card-margin-y:         $spacer-sm !default;
 $card-padding-x:        16px !default;
@@ -235,9 +238,10 @@ $chip-font-size:        13px !default;
 $chip-height:           32px !default;
 $chip-icon-color-dark:  $black-secondary !default;
 $chip-icon-color-light: $black-secondary !default;
-$chip-inner-spacer-x:   $spacer-xs !default;
+$chip-inner-spacer-x:   4px !default;
 $chip-padding-x:        12px !default;
 $chip-padding-y:        8px !default;
+$chip-sm-scale:         .75 !default;
 $chip-width:            $chip-height !default;
 
 
@@ -247,7 +251,8 @@ $chip-width:            $chip-height !default;
 $code-bg-dark:       $dark-2 !default;
 $code-bg-light:      $light-2 !default;
 $code-border-radius: 2px !default;
-$code-color:         #bd4147 !default;
+$code-color-dark:    #bd4147 !default;
+$code-color-light:   #bd4147 !default;
 $code-font-size:     87.5% !default;
 $code-padding:       .2rem .4rem !default;
 
@@ -273,15 +278,14 @@ $dropdown-link-bg-hover-dark:  $white-divider !default;
 $dropdown-link-bg-hover-light: $black-divider !default;
 $dropdown-link-height:         48px !default;
 $dropdown-link-height-sm:      32px !default;
-$dropdown-link-padding-x:      $spacer !default;
-$dropdown-link-padding-x-sm:   $spacer-lg !default;
+$dropdown-link-padding-x:      16px !default;
+$dropdown-link-padding-x-sm:   24px !default;
 $dropdown-link-padding-y:      12px !default;
 $dropdown-link-padding-y-sm:   6.25px !default;
-$dropdown-link-padding-y-sm:   $spacer-lg !default;
 $dropdown-padding-x:           0 !default;
 $dropdown-padding-x-sm:        0 !default;
-$dropdown-padding-y:           $spacer-sm !default;
-$dropdown-padding-y-sm:        $spacer !default;
+$dropdown-padding-y:           8px !default;
+$dropdown-padding-y-sm:        16px !default;
 
 
 
@@ -291,7 +295,7 @@ $header-box-shadow:         $shadow-4dp !default;
 $header-height:             56px !default;
 $header-item-overlay-dark:  $white-divider !default;
 $header-item-overlay-light: $black-divider !default;
-$header-inner-spacer-x:     $spacer-sm !default;
+$header-inner-spacer-x:     8px !default;
 $header-margin-y:           $spacer-lg !default;
 $header-padding-x:          0 !default;
 $header-padding-y:          8px !default;
@@ -304,8 +308,8 @@ $menu-panel-bg-dark:            $dark-4 !default;
 $menu-panel-bg-light:           $light-4 !default;
 $menu-panel-border-radius:      2px !default;
 $menu-panel-box-shadow:         $shadow-24dp !default;
-$menu-panel-inner-spacer-x:     $spacer-sm !default;
-$menu-panel-inner-spacer-y:     $spacer-sm !default;
+$menu-panel-inner-spacer-x:     8px !default;
+$menu-panel-inner-spacer-y:     8px !default;
 $menu-panel-item-overlay-dark:  $dark-hover !default;
 $menu-panel-item-overlay-light: $light-hover !default;
 $menu-panel-padding-x:          24px !default;
@@ -315,18 +319,19 @@ $menu-panel-padding-y:          20px !default;
 
 // Modal
 
-$modal-backdrop-bg:      $black-hint !default;
-$modal-bg-dark:          $dark-4 !default;
-$modal-bg-light:         $light-4 !default;
-$modal-border-radius:    2px !default;
-$modal-box-shadow:       $shadow-24dp !default;
-$modal-footer-padding-x: 8px !default;
-$modal-footer-padding-y: 8px !default;
-$modal-inner-spacer-x:   24px !default;
-$modal-inner-spacer-y:   20px !default;
-$modal-padding-x:        24px !default;
-$modal-padding-y:        24px !default;
-$modal-width:            560px !default;
+$modal-backdrop-bg-dark:  $black-hint !default;
+$modal-backdrop-bg-light: $black-hint !default;
+$modal-bg-dark:           $dark-4 !default;
+$modal-bg-light:          $light-4 !default;
+$modal-border-radius:     2px !default;
+$modal-box-shadow:        $shadow-24dp !default;
+$modal-footer-padding-x:  8px !default;
+$modal-footer-padding-y:  8px !default;
+$modal-inner-spacer-x:    24px !default;
+$modal-inner-spacer-y:    20px !default;
+$modal-padding-x:         24px !default;
+$modal-padding-y:         24px !default;
+$modal-width:             560px !default;
 
 
 // Nav
@@ -372,7 +377,8 @@ $table-margin-y:           $spacer !default;
 $tbody-cell-height:        48px !default;
 $tbody-cell-padding-x:     12px !default;
 $tbody-cell-padding-y:     12px !default;
-$tbody-color:              unquote('$primary') !default;
+$tbody-color-dark:         unquote('$primary') !default;
+$tbody-color-light:        unquote('$primary') !default;
 $thead-color-sorting:      unquote('$primary') !default;
 $tbody-font-size:          13px !default;
 $thead-cell-height:        56px !default;
