--- a/scss/common/_button.scss
+++ b/scss/common/_button.scss
@@ -7,7 +7,7 @@
   border: 0;
   border-radius: $btn-border-radius;
   box-shadow: none;
-  color: $btn-color;
+  color: color-chooser($btn-color-dark, $btn-color-light);
   display: inline-block;
   font-size: $btn-font-size;
   font-weight: $btn-font-weight;
@@ -24,7 +24,7 @@
 
   @include focus-hover {
     background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
-    color: $btn-color;
+    color: color-chooser($btn-color-dark, $btn-color-light);
   }
 
   &:active {
@@ -92,7 +92,7 @@
   }
 
   &::before {
-    background-color: $btn-bg-overlay;
+    background-color: color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light);
     border-radius: $btn-border-radius;
     content: '';
     display: block;
