--- a/scss/common/_table.scss
+++ b/scss/common/_table.scss
@@ -11,7 +11,7 @@
 .table tbody td,
 .table tbody th,
 %tbody-cell {
-  color: $tbody-color;
+  color: color-chooser($tbody-color-dark, $tbody-color-light);
   font-size: $tbody-font-size;
   height: $tbody-cell-height;
   padding: $tbody-cell-padding-y $tbody-cell-padding-x;
