minor fix for screened ip address page

--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -711,6 +711,7 @@ div {
 }
 
 .screened-ip-address-form {
+  float: left;
   margin-right: $spacer-lg;
   margin-bottom: $spacer-lg;
   margin-left: 0;
