convert fa at to md person pin

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -10,6 +10,10 @@
   @include material-icons('new_releases');
 }
 
+.fa-at {
+  @include material-icons('person_pin');
+}
+
 .fa-bar-chart-o {
   @include material-icons('insert_chart');
 }
