--- a/scss/common.scss
+++ b/scss/common.scss
@@ -21,6 +21,7 @@
 //   - Select2
 // - Header
 // - List control
+// - Login
 // - Material icons
 // - Menu panel
 // - Modal
@@ -59,6 +60,7 @@
 @import 'common/form-select2';
 @import 'common/header';
 @import 'common/list-control';
+@import 'common/login';
 @import 'common/material-icons';
 @import 'common/menu-panel';
 @import 'common/modal';
