convert fa exclamation triangle to md warning

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -154,6 +154,10 @@
   @include material-icons('error');
 }
 
+.fa-exclamation-triangle {
+  @include material-icons('warning');
+}
+
 .fa-expand {
   @include material-icons('fullscreen');
 }
