--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -7,7 +7,8 @@
   padding: $header-padding-y $header-padding-x;
 
   button {
-    &.login-button {
+    &.login-button,
+    &.sign-up-button {
       align-items: center;
       background-color: transparent;
       background-image: none;
@@ -32,8 +33,20 @@
       &:focus {
         outline: 0;
       }
+    }
 
+    &.login-button {
       .fa-user {
+        color: unquote('$header-primary');
+        margin-right: 100%;
+        position: absolute;
+      }
+    }
+
+    &.sign-up-button {
+      @include material-icons('person_add');
+
+      &::before {
         color: unquote('$header-primary');
         margin-right: 100%;
         position: absolute;
